[Tech] Cosmetic linter-induced changes